@@ -131,6 +131,8 @@ static void default_fatal_uncaught_exception(value exn)
     caml_print_exception_backtrace();
 }
 
+int caml_abort_on_uncaught_exn = 0; /* see afl.c */
+
 void caml_fatal_uncaught_exception(value exn)
 {
   value *handle_uncaught_exception;
@@ -143,6 +145,10 @@ void caml_fatal_uncaught_exception(value exn)
   else
     default_fatal_uncaught_exception(exn);
   /* Terminate the process */
-  CAML_SYS_EXIT(2);
-  exit(2); /* Second exit needed for the Noreturn flag */
+  if (caml_abort_on_uncaught_exn) {
+    abort();
+  } else {
+    CAML_SYS_EXIT(2);
+    exit(2); /* Second exit needed for the Noreturn flag */
+  }
 }
