@@ -61,6 +61,8 @@ let profiling = %%PROFILING%%
 let flambda = %%FLAMBDA%%
 let safe_string = %%SAFE_STRING%%
 
+let afl_instrument = %%AFL_INSTRUMENT%%
+
 let exec_magic_number = "Caml1999X011"
 and cmi_magic_number = "Caml1999I021"
 and cmo_magic_number = "Caml1999O011"
